yodl (3.06.00)

  * The title, author, date and affiliation elements in html document headers
    have received CSS id selectors (respectively 'title', 'author', 'date' and
    'affiliation') which can be used to tune the way these elements are
    displayed. 

  * In html conversions, to follow xhtml requirements, elements without a
    closing element (like <hr>) are provided with an end-slash (e.g., <hr/>).

  * Fixed the plainhtml macro: it now generates html text.

  * Converted to github

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Mon, 07 Dec 2015 22:21:36 +0100

yodl (3.05.01)

  * The chartables defined in latex.tables.yo now surround <, > and *
    characters by $s (e.g., $<$), preventing LaTeX from processing them in a
    special way (e.g., forming ligatures like one character for >>).

  * Added the file `required' listing the non-standard software that is
    required to build yodl and its user guide

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Tue, 19 May 2015 19:28:26 +0200

yodl (3.05.00)

  * Html conversion by default uses html5, and generates html5 type html
    pages, several macros were adapted accordingly. 

  * New macros (use `man yodlmacros' for their definitions):
        attrib
        htmlheadfile
        htmlstyle
        nohtmlfive
        nohtmlimgstyle
        sethtmlmetacharset

  * Modified macros:
        @counters
        @symbols
        center
        dit
        endcenter
        figure
        htmlbodyopt     - deprecated
        htmlheadopt
        htmlstylesheet
        itdesc
        notocclearpage
        sc
        startcenter
        strong
        tt

  * the `build' script no longer maintains 'stamp' files: build macros, build
    manual and build man commands result in rerunning the command. All
    macro-constructions, including the creation of the macro-list, are now
    concentrated in 'build macros'.

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Sat, 03 Jan 2015 22:33:55 +0100

yodl (3.04.00)
