@@ -1,2 +1,2 @@
-#define VERSION "3.06.00"
-#define YEARS   "1996-2015"
+#define VERSION "3.07.00"
+#define YEARS   "1996-2016"
